--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,15 @@
-.App {
-  text-align: center;
+.jumbotron{
+  font-family: 'Anton', sans-serif;    
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #b3d7ff;
+  border-radius: .3rem;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.jumbotron .titlang{color: #d13a34}
+.mt-table{margin-top: 30px;}
+.ml-search{margin-top: 10px;}
+.w-ip-search{width: 687px}
+.bl_footer{background-color: #b3d7ff}
+.w100{width: 96%}
+.w100-reset{width: 351px;}
+.w86{width: 97%}
